fixed ui bug in used container on mobile

--- a/src/used/used.css
+++ b/src/used/used.css
@@ -5,7 +5,7 @@
 .symbol {
   position: absolute;
   top: 0;
-  right: 5;
+  right: 5px;
   font-weight: bold;
   cursor: pointer;
 }
